--- a/app/items/[id]/styles/Detail.scss
+++ b/app/items/[id]/styles/Detail.scss
@@ -1,114 +1,102 @@
 .container-detail {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   padding: 35px;
   background-color: #ffffff;
   border-radius: 5px;
   overflow: hidden;
   padding: 32px;
   margin-bottom: 24px;
-  .left {
-    display: flex;
-    flex-direction: column;
-    max-width: 70%;
-    .image {
-      width: 100%;
-      text-align: center;
-      margin-bottom: 110px;
-      position: relative;
-    }
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr;
 
-    .description {
-      .title {
-        font-weight: 500;
-        font-size: 28px;
-        margin-bottom: 32px;
-      }
-      p {
-        color: #999999;
-        font-size: 14px;
-      }
-    }
+  .image {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 110px;
+    position: relative;
   }
 
-  .right {
-    max-width: 30%;
-
-    .condition {
-      color: rgba(0, 0, 0, 0.55);
-      font-size: 14px;
-      font-weight: 400;
-      white-space: pre-wrap;
-      margin-bottom: 16px;
-    }
-
+  .description {
     .title {
-      font-size: 24px;
-      font-weight: 600;
+      font-weight: 500;
+      font-size: 28px;
       margin-bottom: 32px;
     }
-
-    .price {
-      margin-bottom: 32px;
-      display: inline-flex;
-
-      .amount {
-        font-size: 46px;
-      }
-
-      .decimals {
-        font-size: 18px;
-        margin-top: 2px;
-      }
-      .free-shipping {
-        margin-left: 8px;
-      }
-    }
-
-    button {
-      background-color: #3483fa;
-      border-color: transparent;
-      color: #fff;
-      width: 100%;
-      box-shadow: 0 0 0 0 #fff;
-      border-radius: 6px;
-      display: inline-block;
-      font-size: 16px;
-      font-weight: 600;
-      height: 48px;
-      padding: 0 24px;
-      text-align: center;
-      cursor: pointer;
-      transition: box-shadow 0.25s ease-out, background-color 0.2s ease-out,
-        -webkit-box-shadow 0.25s ease-out;
-    }
-
-    button:hover {
-      background-color: #2968c8;
-    }
-
-    button:active {
-      background-color: #1f4e96;
+    p {
+      color: #999999;
+      font-size: 14px;
     }
   }
 }
 
+.condition {
+  color: rgba(0, 0, 0, 0.55);
+  font-size: 14px;
+  font-weight: 400;
+  white-space: pre-wrap;
+  margin-bottom: 16px;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 32px;
+}
+
+.price {
+  margin-bottom: 32px;
+  display: inline-flex;
+
+  .amount {
+    font-size: 46px;
+  }
+
+  .decimals {
+    font-size: 18px;
+    margin-top: 2px;
+  }
+  .free-shipping {
+    margin-left: 8px;
+  }
+}
+
+button {
+  background-color: #3483fa;
+  border-color: transparent;
+  color: #fff;
+  width: 100%;
+  box-shadow: 0 0 0 0 #fff;
+  border-radius: 6px;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  height: 48px;
+  padding: 0 24px;
+  text-align: center;
+  cursor: pointer;
+  transition: box-shadow 0.25s ease-out, background-color 0.2s ease-out,
+    -webkit-box-shadow 0.25s ease-out;
+}
+
+button:hover {
+  background-color: #2968c8;
+}
+
+button:active {
+  background-color: #1f4e96;
+}
+
 @media screen and (max-width: 768px) {
   .container-detail {
-    flex-direction: column;
-    padding: 15px;
-    .left {
-      max-width: 100%;
-      .image {
-        margin-bottom: 20px;
-        img {
-          width: 100%;
-        }
-      }
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+
+    .image {
+      margin-bottom: 10px;
     }
+
     .right {
-      max-width: 100%;
+      margin-bottom: 70px;
     }
   }
 }
